# warehouse_robot_sim

./: .gitignore  README.md
warehouse_robot_sim/: package.xml  setup.cfg  setup.py
warehouse_robot_sim/config/: nav2_params.yaml  nav2_params_robot1.yaml  nav2_params_robot2.yaml  nav2_params_robot3.yaml  nav2_params_robot4.yaml
warehouse_robot_sim/dashboard/: index.html
warehouse_robot_sim/launch/: initial_poses.launch.py  multi_robot_navigation.launch.py  multi_robot_world.launch.py  navigation.launch.py  robot1_navigation.launch.py  robot2_navigation.launch.py  warehouse_world.launch.py
warehouse_robot_sim/layouts/: asymmetric.json  compact.json  cross_traffic.json  standard.json  wide_aisle.json
warehouse_robot_sim/maps/: asymmetric_map.pgm  asymmetric_map.yaml  clean_warehouse_map.pgm  clean_warehouse_map.yaml  compact_map.pgm  compact_map.yaml  cross_traffic_map.pgm  cross_traffic_map.yaml  warehouse_map.pgm  warehouse_map.yaml  wide_aisle_map.pgm  wide_aisle_map.yaml
warehouse_robot_sim/scripts/: generate_clean_warehouse_map.py
warehouse_robot_sim/test/: test_custom_layout.py  test_experiment_store.py
warehouse_robot_sim/warehouse_robot_sim/: custom_layout.py  delivery_task_node.py  experiment_api.py  experiment_store.py  fleet_metrics_node.py  initial_pose_publisher_node.py  job_dispatcher_node.py  layout_config.py  multi_robot_dispatcher_node.py  station_occupancy_node.py
warehouse_robot_sim/worlds/: asymmetric.world  compact.world  cross_traffic.world  warehouse.world  wide_aisle.world
